--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       }
     </script>
     <img
-      id="news"
+      id="cat"
       onmouseover="this.src='https://wompampsupport.azureedge.net/fetchimage?siteId=7575&v=2&jpgQuality=100&width=700&url=https%3A%2F%2Fi.kym-cdn.com%2Fphotos%2Fimages%2Fnewsfeed%2F001%2F931%2F957%2Fb02.jpg'"
       onmouseout="this.src='https://i.kym-cdn.com/photos/images/newsfeed/001/931/955/181.jpg'"
       height="100px"
